add pseudocode jinja

--- a/templates/question.html
+++ b/templates/question.html
@@ -12,8 +12,10 @@
             name="answer"
             value="value-goes-here">
         choice-goes-here
+        <!-- Us: loop here to display choices -->
       </p>
 
+      <!-- Us: Add hidden input with the current question index -->
     <button>Continue</button>
   </form>
 
