--- a/templates/question.html
+++ b/templates/question.html
@@ -17,6 +17,7 @@
         <label for="{{ response }}">{{ response }}</label>
       </p>
       {% endfor %}
+      <input type="hidden" name="index" value="{{ q_number }}">
       <!-- Us: Add hidden input with the current question index -->
     <button>Continue</button>
   </form>
