--- a/templates/completion.html
+++ b/templates/completion.html
@@ -4,4 +4,10 @@
 
   <h1>Thanks for completing this survey!</h1>
 
+  <ul>
+    {% for (question, answer) in recap %}
+    <li><strong>{{ question.prompt }}</strong> {{ answer }}</li>
+    {% endfor %}
+  </ul>
+
 {% endblock %}
