update flashed msgs to base

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+{% for msg in get_flashed_messages() %}
+  <p>{{ msg }}</p>
+{% endfor %}
+
 {% block content %}
 {% endblock %}
 
